# Dual-FOC-Controller

firmware/: .gitignore  .mxproject  CMakeLists.txt  Makefile  foc-f103.ioc  foc.jdebug
firmware/Core/Inc/: main.h  stm32f1xx_it.h
firmware/Core/Src/: adc.c  gpio.c  main.c  spi.c  stm32f1xx_it.c  tim.c
firmware/Diagnostic/: Hook.cpp
firmware/User/: AS5048.cpp  AS5048.h  FreeRTOSConfig.h  UserTask.cpp  UserTask.h
firmware/foc-f103/: foc-f103.ioc
hardware/foc-driver/: foc-driver.kicad_pcb  foc-driver.kicad_prl  foc-driver.kicad_pro  foc-driver.kicad_sch  fp-info-cache
hardware/foc-driver/kicad_lceda.3dshapes/: HTSSOP-28_L9.7-W4.4-H1.2-LS6.4-P0.65.wrl  SW-SMD_L3.9-W2.9-H2.0-LS4.8.wrl
hardware/foc-driver/production/foc-driver_2024-01-13_17-46-28/: bom.csv  designators.csv  netlist.ipc  positions.csv
